# ai-terminal-assistant

./: CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_cli.py
