[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-terminal-assistant"
version = "1.0.0"
description = "AI-powered terminal assistant for debugging and command help."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-terminal-assistant = "ai_terminal_assistant.main:cli"

[tool.setuptools.packages.find]
include = ["ai_terminal_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
